package com.module.playways.relay.room.model

import com.common.core.userinfo.model.UserInfoModel
import com.module.playways.room.prepare.model.PlayerInfoModel
import com.zq.live.proto.MicRoom.EMUserRole
import com.zq.live.proto.MicRoom.MOnlineInfo

class RelayPlayerInfoModel : PlayerInfoModel() {


}
